# browser-gateway

./: Dockerfile  README.md  compose.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: __init__.py  browser.py  config.py  health.py  logger.py  main.py
app/api/: routes.py
app/browser/: __init__.py  browser_identity.py  browser_manager.py  domain_session.py  identity_history.py  identity_policy.py  page_controller.py  protection_detector.py  stealth.py
app/config/: settings.py
app/models/: enums.py  metrics.py  schemas.py
app/services/: browser_service.py
